# finout-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  Dockerfile.asaf  Dockerfile.billy  Dockerfile.mcp-hosted-public  Dockerfile.vectiqor  Makefile  README.md  STRUCTURE.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
.claude/commands/: release-whats-new.md
.codex/skills/release-whats-new/: SKILL.md
.github/workflows/: cicd.yml
deployments/kubernetes/: README.md  asaf-configmap.yaml  asaf-deployment.yaml  asaf-ingress.yaml  asaf-secret.yaml.example  asaf-service.yaml  billy-configmap.yaml  billy-deployment.yaml  billy-ingress.yaml  billy-secret.yaml.example  billy-service.yaml  kustomization.yaml  langfuse-clickhouse.yaml  langfuse-configmap.yaml  langfuse-ingress.yaml  langfuse-minio.yaml  langfuse-redis.yaml  langfuse-secret.yaml.example  langfuse-web.yaml  langfuse-worker.yaml  namespace.yaml  vectiqor-configmap.yaml  vectiqor-deployment.yaml  vectiqor-ingress.yaml
deployments/kubernetes-hosted-public/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
deployments/mcp-cloudfront/: main.tf  outputs.tf  variables.tf
docs/: CLAUDE_DESKTOP_SETUP.md  DISTRIBUTIONS.md  MANUAL_WHL_DISTRIBUTION.md
evals/: README.md  cases.json  package.json  pnpm-lock.yaml  promptfoo-tests.mjs  promptfoo.yaml  setup.sh
evals/assertions/: tool-args.cjs
scripts/: build_mcp_distributions.sh  release_minor_with_changelog.py
