[project]
name = "finout-mcp-workspace"
version = "0.1.0"
description = "Finout MCP Server - Monorepo"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
finout-mcp = { workspace = true }
finout-mcp-hosted = { workspace = true }
vectiqor = { workspace = true }
vectiqor-mcp-internal = { workspace = true }
